# funfake

./: README.md  pyproject.toml
src/funfake/headers/: README.md  browsers.py  headers.py  platforms.py
